IE bugs fixed. Vertical alignment. Everything working fine.

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@ font-weight: 500;
     font-family: 'Lobster', cursive;
 }
 
+.centered {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #about h3 {
 font-family: 'Bitter', serif;
 }
@@ -106,8 +113,8 @@ background-position: 50% 50%;
     border-right: 4px solid #3498db;
     border-top: 4px solid #3498db;
     border-left: 4px solid #3498db;
-    width:150px;
-    height: 150px;
+    width:145px;
+    height: 145px;
     line-height: 125px;
     margin: 1em;
 }
@@ -118,8 +125,8 @@ background-position: 50% 50%;
     border-right: 4px solid crimson;
     border-top: 4px solid crimson;
     border-left: 4px solid crimson;
-    width:150px;
-    height: 150px;
+    width:145px;
+    height: 145px;
     line-height: 125px;
     margin: 1em;
 }
@@ -130,8 +137,8 @@ background-position: 50% 50%;
     border-right: 4px solid green;
     border-top: 4px solid green;
     border-left: 4px solid green;
-    width:150px;
-    height: 150px;
+    width:145px;
+    height: 145px;
     line-height: 125px;
     margin: 1em;
 }
